# bibsleuth

./: .gitignore  README.md  pyproject.toml
src/bibsleuth/: __init__.py  cache.py  cli.py  config.py  library.py  report.py  types.py
src/bibsleuth/llm/: analysis.py  client.py  contradictions.py  miscitation.py  parsing.py  suggestions.py
src/bibsleuth/parse/: bib.py  extract_ids.py  normalize.py  tex.py
src/bibsleuth/providers/: __init__.py  arxiv.py  base.py  crossref.py  dblp.py  openalex.py  pubmed.py  semantic_scholar.py
src/bibsleuth/verify/: existence.py  scoring.py
tests/: conftest.py  test_cache.py  test_cli.py  test_entry_type.py  test_extract_ids.py  test_normalize.py  test_parse_bib.py  test_parse_tex.py  test_report.py  test_scoring.py  test_verify_existence.py
tests/fixtures/: sample.bib  sample.tex
